# SkiGenius

./: .env  .gitignore  Joined_Ski_data.csv  README.md  pyproject.toml  requirements.txt  ski_environment.yml
.github/: build_test.yml
.github/workflows/: build_test.yml
data/: df_merged_final.csv  df_merged_scaled_final.csv
docs/: Component Specification.md  ComponentAnalysis.md  Functional specification.md  UseCases.md  UserStories.md  milestones.md
examples/: README.md
processor/: vectorizer.py
src/: README.md  frontend.py  frontendutil.py  init_db.py  query_unit.py
src/database/: __init__.py  create.py  insert.py
src/frontend/: frontend.py  frontendutil.py
src/processor/: query_generator.py  vectorizer.py
src/scripts/: init_db.py
src/tests/: test_database.py  test_frontend.py  test_query_generator.py  test_query_unit.py  test_vectorizer.py
